--- a/_data/samplelist.yml
+++ b/_data/samplelist.yml
@@ -6,6 +6,8 @@ toc2:
     subfolderitems:
       - page: Number Systems
         url: /notes/mathematics/numbersystems/numbersystem.docx
+      - page: Combinatorics
+        url: /notes/mathematics/combinatorics/combinatorics.docx
   - title: DotNet Development
     subfolderitems:
       - page: Core Language
