--- a/_data/samplelist.yml
+++ b/_data/samplelist.yml
@@ -8,8 +8,12 @@ toc2:
         url: /notes/compsci/algorithms/algorithms.docx
   - title: Mathematics
     subfolderitems:
+      - page: Cheat Sheet
+        url: /notes/mathematics/cheatsheet.docx
       - page: Number Systems
         url: /notes/mathematics/numbersystems/numbersystem.docx
+      - page: Sets
+        url: /notes/mathematics/sets.docx
       - page: Combinatorics
         url: /notes/mathematics/combinatorics/combinatorics.docx
   - title: DotNet Development
