Sorted number theory notes

--- a/_data/samplelist.yml
+++ b/_data/samplelist.yml
@@ -12,6 +12,8 @@ toc2:
         url: /notes/mathematics/cheatsheet.docx
       - page: Number Systems
         url: /notes/mathematics/numbersystems/numbersystem.docx
+      - page: Number Theory
+        url: /notes/mathematics/numbertheory/numbertheory.docx
       - page: Sets
         url: /notes/mathematics/sets.docx
       - page: Combinatorics
