Moved sets from word to pdf

--- a/_data/samplelist.yml
+++ b/_data/samplelist.yml
@@ -31,7 +31,7 @@ toc2:
       - page: Number Theory
         url: /notes/mathematics/numbertheory/numbertheory.docx
       - page: Sets
-        url: /notes/mathematics/sets.docx
+        url: /notes/mathematics/sets.pdf
       - page: Combinatorics
         url: /notes/mathematics/combinatorics/combinatorics.docx
       - page: Sequences, Series and Sums
