--- a/_data/samplelist.yml
+++ b/_data/samplelist.yml
@@ -48,6 +48,8 @@ toc2:
     subfolderitems:
       - page: Core Language
         subsubfolderitems:
+          - page: Bits and Bytes
+            url: /notes/dotnet/corelib/typesystem/bitsbytesandnums.pdf
           - page: The Type System
             url: /notes/dotnet/corelib/typesystem/typesystem.pdf
           - page: Threading
