added more alg details

--- a/_data/samplelist.yml
+++ b/_data/samplelist.yml
@@ -16,6 +16,8 @@ toc2:
     subfolderitems:
       - page: Algorithms
         url: /notes/compsci/algorithms/algorithms.pdf
+      - page: Algorithm Questions
+        url: /notes/compsci/algorithms/questions.pdf
       - page: Number Systems
         url: /notes/compsci/numbers/numbersystems.pdf
   - title: Mathematics
