--- a/_data/samplelist.yml
+++ b/_data/samplelist.yml
@@ -14,6 +14,8 @@ toc2:
         url: /notes/web/typescript/typescript.pdf
       - page: React
         url: /notes/web/react/react.pdf
+      - page: Security
+        url: /notes/web/security/security.pdf
   - title: Software Development
     subfolderitems:
       - page: Architecture
