--- a/_data/samplelist.yml
+++ b/_data/samplelist.yml
@@ -4,20 +4,24 @@ docs:
 toc2:
   - title: Web Development
     subfolderitems:
-      - page: MongoDB
-        url: /notes/web/mongodb/mongodb.pdf
-      - page: Docker
-        url: /notes/web/docker/docker.pdf
+      - page: .NET Core
+        url: /notes/dotnet/dotnetcore/dotnetcore.pdf
       - page: JavaScript
         url: /notes/web/javascript/javascript.pdf
+      - page: Node
+        url: /notes/web/node/node.pdf
       - page: TypeScript
         url: /notes/web/typescript/typescript.pdf
       - page: React
         url: /notes/web/react/react.pdf
-      - page: Security
-        url: /notes/web/security/security.pdf
       - page: CSS
         url: /notes/web/css/css.pdf
+      - page: MongoDB
+        url: /notes/web/mongodb/mongodb.pdf
+      - page: Docker
+        url: /notes/web/docker/docker.pdf
+      - page: Security
+        url: /notes/web/security/security.pdf
       - page: KeyCloak
         url: /notes/web/keycloak/keycloak.pdf
   - title: Software Development
